Убрал dto из сервисного слоя
