# src/main/java/ru/tinkoff/tictactoe/session/controller/SessionController.java
@@ -1,8 +1,8 @@
-package ru.tinkoff.tictactoe.session;
+package ru.tinkoff.tictactoe.session.controller;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
-import ru.tinkoff.tictactoe.session.dto.*;
+import ru.tinkoff.tictactoe.session.SessionService;
 
 import java.util.List;
 import java.util.UUID;
@@ -21,10 +21,10 @@ public class SessionController {
 
     @GetMapping("")
     public List<FullStateOfSessionResponseDto> getSessions(@RequestParam(value = "isActive", required = false) Boolean isActive) {
-        return sessionService.getSessionsByIsActive(isActive);
+        return sessionMapper.toListFullStateOfSessionResponseDto(sessionService.getSessionsByIsActive(isActive));
     }
 
-    @PutMapping("/{session_id}")
+    @PostMapping("/{session_id}/registration")
     public RegisterBotResponseDto registerBotInSession(@PathVariable("session_id") UUID sessionId,
                                                        @RequestBody RegisterBotRequestDto registerBotRequestDto) {
         return new RegisterBotResponseDto(sessionService.registerBotInSession(sessionId, registerBotRequestDto.getBotId()));
@@ -32,11 +32,11 @@ public class SessionController {
 
     @GetMapping("/{session_id}")
     public StateOfSessionResponseDto getCurrentStateOfSession(@PathVariable("session_id") UUID sessionId) {
-        return sessionService.getCurrentStateOfSession(sessionId);
+        return sessionMapper.toStateOfSessionResponseDto(sessionService.getCurrentStateOfSession(sessionId));
     }
 
-    @GetMapping("/{session_id}/turn/{turn}")
+    @GetMapping("/{session_id}/turns/{turn}")
     public StateOfSessionResponseDto getCurrentStateOfSession(@PathVariable("session_id") UUID sessionId, @PathVariable("turn") Integer turn) {
-        return sessionService.getStateOfSessionByTurn(sessionId, turn);
+        return sessionMapper.toStateOfSessionResponseDto(sessionService.getStateOfSessionByTurn(sessionId, turn));
     }
 }
