# src/main/java/ru/tinkoff/tictactoe/session/controller/StateOfSessionResponseDto.java
@@ -1,4 +1,4 @@
-package ru.tinkoff.tictactoe.session.dto;
+package ru.tinkoff.tictactoe.session.controller;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.*;
@@ -10,10 +10,13 @@ import java.util.Date;
 @Getter
 @Setter
 @Builder
-public class StateOfSessionResponseDto {
+class StateOfSessionResponseDto {
     @JsonProperty(value = "game_field")
     private String gameField;
 
     @JsonProperty(value = "last_turn_time")
     private Date lastTurnTime;
+
+    @JsonProperty(value = "turn")
+    private Integer turn;
 }
